# src/Models/Categoria.ts
@@ -1,0 +1,9 @@
+import db from '../Database/database_postgres';
+
+class Categoria{
+    public id: String;
+
+    public name: String;
+}
+
+export default Categoria;
